@@ -15,7 +15,9 @@ use base (qw(
    DBIx::Class::Helper::ResultSet::Shortcut::Limit
    DBIx::Class::Helper::ResultSet::Shortcut::OrderByMagic
    DBIx::Class::Helper::ResultSet::Shortcut::Prefetch
+   DBIx::Class::Helper::ResultSet::Shortcut::LimitedPage
    DBIx::Class::Helper::ResultSet::Shortcut::Rows
+   DBIx::Class::Helper::ResultSet::Shortcut::Page
 ));
 
 1;
@@ -116,6 +118,20 @@ This is an alias for C<rows>.
 A lighter way to check the resultset contains any data rather than
 calling C<< $rs->count >>.
 
+=method page
+
+ $foo_rs->page(2);
+
+ # equivalent to...
+ $foo_rs->search(undef, { page => 2 })
+
+=method limited_page
+
+ $foo_rs->limited_page(2, 3);
+
+ # equivalent to...
+ $foo_rs->search(undef, { page => 2, rows => 3 })
+
 =method columns
 
  $foo_rs->columns([qw/ some column names /]);
@@ -173,5 +189,12 @@ C<DBIx::Class::Helper::ResultSet::Shortcut::OrderBy>))
 =item * L<DBIx::Class::Helper::ResultSet::Shortcut::Columns>
 
 =item * L<DBIx::Class::Helper::ResultSet::Shortcut::AddColumns>
+
+=item * L<DBIx::Class::Helper::ResultSet::Shortcut::Page>
+
+=item * L<DBIx::Class::Helper::ResultSet::Shortcut::LimitedPage>
+
+(inherits from C<DBIx::Class::Helper::ResultSet::Shortcut::Page> and
+L<DBIx::Class::Helper::ResultSet::Shortcut::Rows>)
 
 =back
