@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Create Shortcut::Page and Shortcut::LimitedPage ResultSet helpers (wreis)
 
 2.020001  2014-03-05 10:33:46CST-0600 America/Chicago
  - Make ::DateMethods1 tests paralellizable (thanks Alexander Hartmaier!)
